--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <%= link_to 'logout', logout_path %>
+    <% else %>
+      <%= link_to 'register', signup_path %>
+      <%= link_to 'login', login_path %>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
