--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,16 @@
-<h1>show User</h1>
-<div>
-	<%= @user.name %>
+<% if logged_in? %>
+	<h1>show User</h1>
+	<div>
+		<%= @user.name %>
 
-</div>
-<div>
-	<%= @user.email %>
+	</div>
+	<div>
+		<%= @user.email %>
 
-</div>
+	</div>
+
+<% else %>
+
+	<h1> please log in </h1>
+
+<% end %>
