--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,13 +21,16 @@
           <td><%= post.user.name %></td>
         <% end %>  
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if logged_in? && current_user.id ==  post.user.id %>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
+<% if logged_in?%>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
