--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,8 @@
 	  <%= @post.user.name %>
 	</p>
 <% end %>	
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<% if logged_in? && current_user.id ==  @post.user.id %>
+	<%= link_to 'Edit', edit_post_path(@post) %> |
+	<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %> 
 <%= link_to 'Back', posts_path %>
