--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,6 @@
 <% end %>	
 <% if logged_in? && current_user.id ==  @post.user.id %>
 	<%= link_to 'Edit', edit_post_path(@post) %> |
-	<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %> 
 <%= link_to 'Back', posts_path %>
